demux: ts: don't append empty ts packets into PES (refs #23654)